modificando el index

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Portafolio</title>
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="body">
+    <header class="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-success">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <a class="navbar-brand" href="#">Hidden brand</a>
+                <a class="navbar-brand" href="#">Quien soy</a>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">Sobre mi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Mis proyectos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Habilidades</a>
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -35,11 +35,29 @@
                 </form>
               </div>
             </div>
-          
-
-
-
-
     </header>
+<main>
+
+
+             <div class="contenedor">
+                <h1>Quien soy</h1>
+                    <hr>
+                         <div class="card">
+                     <div class="card-header">
+                             Featured
+                             <img class="card" src="assets/img/foto.jpeg" alt="card">
+                         </div>
+                        <div class="card-body">
+                            <h5 class="card-title"> Una estudiante de front-end</h5>
+                            <p class="card-text">.Con diferentes tipos de habilidades</p>
+                         <a href="#" class="btn btn-primary">Quien soy</a>
+                        </div>
+                     </div>
+             </div>
+
+
+
+
+    
 </body>
 </html>
