--- a/index.html
+++ b/index.html
@@ -10,43 +10,76 @@
     <title>Portafolio</title>
 </head>
 <body class="body">
-    <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Ledis Martinez</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/foto.jpeg" alt="foto"></span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="navbar-collapse collapse show" id="navbarResponsive" style="">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="#sobre mi">Sobre mi</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experiencia">Experiencia</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#educacion">Educacion</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#habilidades">Habilidades</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#cursos">Cursos</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#intereses">Intereses</a></li>
+ 
+    <div class="contenedor_principal d-flex">
+        <aside class="lateral fixed-left">
+            <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
+                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                  <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+                  <span class="fs-4">Ledis folio</span>
+                </a>
+                <hr>
+                <ul class="nav nav-pills flex-column mb-auto">
+                  <li class="nav-item">
+                    <a href="#" class="nav-link active" aria-current="page">
+                      <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+                      Sobre mi
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="nav-link text-white">
+                      <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+                      Educacion
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="nav-link text-white">
+                      <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
+                      Habilidades
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="nav-link text-white">
+                      <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
+                      Mis proyectos
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="nav-link text-white">
+                      <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                      Cursos Recibidos
+                    </a>
+                  </li>
                 </ul>
-
-            </div>
-        </nav>
-    </header>
-<main>
-
-    <div class="contenedor">
-        <h1>Quien soy</h1>
-            <hr>
-                 <div class="card">
-             <div class="card-header">
-                     Featured
-                     <img class="card" src="assets/img/foto.jpeg" alt="card"><h2>Ledis Martinez</h2>
-                 </div>
-                <div class="card-body">
-                    <h5 class="card-title"> Una estudiante de front-end</h5>
-                    <p class="card-text">.Con diferentes tipos de habilidades</p>
-                 <a href="#" class="btn btn-primary">Quien soy</a>
+                <hr>
+                <div class="dropdown">
+                  <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                    <strong>mdo</strong>
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+                    <li><a class="dropdown-item" href="#">Sobre mi.</a></li>
+                    <li><a class="dropdown-item" href="#">Educacion</a></li>
+                    <li><a class="dropdown-item" href="#">Hablidades</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Mis proyectos</a></li>
+                  </ul>
                 </div>
-             </div>
-     </div>
+            </div>
+        </aside>
+        <main>
+        <h1>Portafolio</h1>
+       
+            <div class="card proyecto">
+                <img class="card" src="./assets/img/foto.jpeg" alt="card" id="card__img">
+                <div class="card-body">
+                  <h5 class="card-title">Ledis Martinez</h5>
+                  <p class="card-text">Una estudiante de Front-end con diferete tipo de habilidades.</p>
+                  <a href="#" class="btn btn-primary">Sobre mi</a>
+                </div>
+              </div>
             
+        </main>       
+    </div>
 </body>
 </html>
